lex/src/snapshots/lex__tests__numeric.snap
---
source: lex/src/lib.rs
expression: tokens
---
[
    (
        NUMERIC,
        "1234567890",
    ),
]
