lex/src/snapshots/lex__tests__punctuation.snap
---
source: lex/src/lib.rs
expression: tokens
---
[
    (
        LEFT_PAREN,
        "(",
    ),
    (
        RIGHT_PAREN,
        ")",
    ),
    (
        LEFT_BRACE,
        "{",
    ),
    (
        RIGHT_BRACE,
        "}",
    ),
    (
        LEFT_BRACKET,
        "[",
    ),
    (
        RIGHT_BRACKET,
        "]",
    ),
    (
        LEFT_CHEVRON,
        "<",
    ),
    (
        RIGHT_CHEVRON,
        ">",
    ),
    (
        COMMA,
        ",",
    ),
    (
        DOT,
        ".",
    ),
    (
        MINUS,
        "-",
    ),
    (
        PLUS,
        "+",
    ),
    (
        COLON,
        ":",
    ),
    (
        SEMICOLON,
        ";",
    ),
    (
        EQUAL,
        "=",
    ),
    (
        SLASH,
        "/",
    ),
    (
        BACKSLASH,
        "\\",
    ),
    (
        STAR,
        "*",
    ),
    (
        HASH,
        "#",
    ),
    (
        AT,
        "@",
    ),
    (
        DOLLAR,
        "$",
    ),
    (
        PERCENT,
        "%",
    ),
    (
        CARET,
        "^",
    ),
    (
        AMPERSAND,
        "&",
    ),
    (
        PIPE,
        "|",
    ),
    (
        TILDE,
        "~",
    ),
    (
        UNDERSCORE,
        "_",
    ),
    (
        QUESTION,
        "?",
    ),
    (
        EXCLAMATION,
        "!",
    ),
    (
        SINGLE_QUOTE,
        "'",
    ),
    (
        DOUBLE_QUOTE,
        "\"",
    ),
    (
        BACKTICK,
        "`",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        TAB,
        "\t",
    ),
    (
        NEW_LINE,
        "\n",
    ),
]
