lex/src/snapshots/lex__tests__text_alphabet.snap
---
source: lex/src/lib.rs
expression: tokens
---
[
    (
        TEXT,
        "abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ",
    ),
]
