lex/src/snapshots/lex__tests__text_hangul.snap
---
source: lex/src/lib.rs
expression: tokens
---
[
    (
        TEXT,
        "가나다라마바사아자차카타파하",
    ),
]
